--- a/src/app/pages/post/post.component.sass
+++ b/src/app/pages/post/post.component.sass
@@ -2,10 +2,11 @@
 
 @mixin centerContainer()
     max-width: 1200px
-    width: 100%
+    width: 100vw
     margin: 0 auto
 
 .md-container
+    padding: 0 8px 8px
     @include centerContainer
 
     .image-container
